--- a/css.css
+++ b/css.css
@@ -243,7 +243,10 @@ h2 {
     display: flex;
     height: 100%;
     width: 100%;
-    margin: 0 auto;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
+    margin-bottom: 0 auto;
+    margin-top: 200px;
     text-align: center;
     flex-direction: row;
 
