--- a/css.css
+++ b/css.css
@@ -85,6 +85,7 @@ h2 {
     color: green;
     margin-left: 42%;
     margin-top: 50px;
+    margin-bottom: 50px;
 
     &:hover {
         cursor: pointer;
@@ -100,6 +101,7 @@ h2 {
     color: green;
     margin-left: 42%;
     margin-top: 50px;
+    margin-bottom: 50px;
 
     &:hover {
         cursor: pointer;
@@ -115,6 +117,7 @@ h2 {
     color: green;
     margin-left: 42%;
     margin-top: 50px;
+    margin-bottom: 50px;
 
     &:hover {
         cursor: pointer;
@@ -243,10 +246,7 @@ h2 {
     display: flex;
     height: 100%;
     width: 100%;
-    margin-left: 0 auto;
-    margin-right: 0 auto;
-    margin-bottom: 0 auto;
-    margin-top: 200px;
+    margin: 0 auto;
     text-align: center;
     flex-direction: row;
 
@@ -314,6 +314,10 @@ h2 {
 
   
 }
+.spacer{
+    width: 100%;
+    height: 300px;
+}
 
 .bodyt{
     padding: 15px;
@@ -328,7 +332,7 @@ h2 {
     padding: 15px;
     color: antiquewhite;
     font-family: "Jost";
-    font-size: 2em;
+    font-size: 2.75em;
     margin-bottom: 50px;
     margin-left: 100px;
 }
